modify trend analysis page

--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,8 @@
   <!-- 搜索栏 -->
   <div id="search">
     <div class="dropdown" id="search-select-menu">
-      <button  class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> 搜索角色
+      <button  class="dropdown-toggle" data-toggle="dropdown">
+        <span class="glyphicon glyphicon-user"></span> 搜索角色
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
@@ -48,13 +49,7 @@
       <a href="/search" style="color: white;height: 20px"><span class="glyphicon glyphicon-search"></span></a>
     </button>
   </div>
-<!--   <div class="search-select">
-    <ul>
-      <li>搜索角色</li>
-      <li>搜索地区</li>
-      <li>搜索事件</li>
-    </ul> -->
-  </div>
+  <!-- </div> -->
   <!-- 下方工具栏 -->
   <footer id="footer" class="navbar navbar-fixed-bottom">
     <div id="footer-container">
