--- a/views/trendAnalysis.html
+++ b/views/trendAnalysis.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8" style="text-align: center;" >
-                <svg width="1000" height="500" style="margin-top: 150px"></svg>
+                <svg width="1000" height="500" style="margin-top: 150px;margin-bottom: 150px"></svg>
             </div>
             <div class="col-2"></div>
         </div>
