--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">首页</a></li>
-          <li><a href="/trendAnalysis">趋势分析</a></li>
+          <li><a href="/analysis">趋势分析</a></li>
           <li><a href="#contact">关联分析</a></li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
         <button>日期</button>
       </div>
       <div id="menu">
-        <button>事件数</button>
+        <button class="active">事件数</button>
         <button>声誉值</button>
         <button>稳定性</button>
         <button>影响力</button>
