--- a/views/analysis.html
+++ b/views/analysis.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/trendAnalysis.css">
-    <title>trendAnalysis</title>
+    <link rel="stylesheet" href="/static/css/analysis.css">
+    <title>Analysis</title>
 </head>
 <body>
 
@@ -66,10 +66,10 @@
           <button>日期</button>
         </div>
         <div id="menu">
-          <button>事件数</button>
-          <button>声誉值</button>
-          <button>稳定性</button>
-          <button>影响力</button>
+          <button class="active">事件数</button>
+          <button class="">声誉值</button>
+          <button class="">稳定性</button>
+          <button class="">影响力</button>
           <p>2300000 事件</p>
         </div>
         <div id="play">
@@ -82,5 +82,6 @@
     <script src="static/js/bootstrap.min.js"></script>
     <script src="/static/js/d3.js"></script>
     <script src="/static/js/curve.js"></script>
+    <script src="/static/js/analysis.js"></script>
 </body>
 </html>
